fix(ejs-&-scss): Eliminated the gap between header and kv elements

--- a/src/assets/scss/base/_foundation.scss
+++ b/src/assets/scss/base/_foundation.scss
@@ -44,7 +44,6 @@ body {
 
 main {
   flex-grow: 1; // Keep the footer at the bottom
-  background-color: var(--color-neutral-lightest);
 }
 
 a,
