--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -3,3 +3,12 @@
    ========================================================================== */
 
 @use '../abstracts/' as *;
+
+.l-main__inner {
+  padding-top: fs-rem(120px);
+  background-color: var(--color-neutral-lightest);
+
+  @include mq($from: desktop) {
+    padding-top: fs-rem(160px);
+  }
+}
